syntax = "proto3";

package healthcare;

service DoctorsService {
  rpc CreateDoctorServices(DoctorServices) returns (DoctorServices);
  rpc GetDoctorServiceByID(GetReqStr) returns (DoctorServices);
  rpc GetAllDoctorServices(GetAllDoctorServiceS) returns (ListDoctorServices);
  rpc UpdateDoctorServices(DoctorServices) returns (DoctorServices);
  rpc DeleteDoctorService(GetReqStr) returns (Status);
}


message DoctorServices {
  string id = 1;
  int32 doctor_service_order = 2;
  string doctor_id = 3;
  string specialization_id = 4;
  float online_price = 5;
  float offline_price = 6;
  string name = 7;
  string duration = 8;
  string created_at = 9;
  string updated_at = 10;
  string deleted_at = 11;
}

message ListDoctorServices {
  repeated DoctorServices doctorServices = 1;
  int32 count = 2;
}

message GetReqStr{
  string field = 1;
  string value = 2;
  bool is_active = 3;
}

message GetAllDoctorServiceS {
  int64 page = 1;
  int64 limit = 2;
  string field = 3;
  string value = 4;
  string order_by = 5;
  bool is_active = 6;
}

message Status {
  bool status = 1;
}

